# tecapsdesafio8

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: desafio8.c  desafio8.h  main.c
test/: CMakeLists.txt  tests_desafio8.c  tests_desafio8.h
