include_directories(../src)

add_executable(
    unit_tests
    ../src/desafio8.c
    tests_desafio8.c
    )

# Template para testes de Analisadores Léxicos
function(do_test lexicalanalyser target testid arg1 arg2 result)
  add_test(NAME ${lexicalanalyser}-Test-${testid} COMMAND ${target} ${arg1} "${arg2}")
  set_tests_properties(${lexicalanalyser}-Test-${testid}
    PROPERTIES PASS_REGULAR_EXPRESSION ${result}
    )
endfunction(do_test)

do_test("addcommandLexicalAnalyser_ValidScenario" unit_tests 1 0 "add 123 Roberto Nascimento 01/01/1960 +55-21-0190-0190" "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("addcommandLexicalAnalyser_ValidScenario" unit_tests 2 0 "     add 124 Roberto Nascimento 01/01/1960 +55-21-0190-0190" "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("addcommandLexicalAnalyser_ValidScenario" unit_tests 3 0 "add       125 Roberto Nascimento 01/01/1960 +55-21-0190-0190" "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("addcommandLexicalAnalyser_ValidScenario" unit_tests 4 0 "add 1    Roberto Nascimento 01/01/1960 +55-21-0190-0190" "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("addcommandLexicalAnalyser_ValidScenario" unit_tests 5 0 "add 2 Roberto     Nascimento 01/01/1960 +55-21-0190-0190" "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("addcommandLexicalAnalyser_ValidScenario" unit_tests 6 0 "add 3 Roberto Nascimento      01/01/1960 +55-21-0190-0190" "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("addcommandLexicalAnalyser_ValidScenario" unit_tests 7 0 "add 4 Roberto Nascimento 01/01/1960       +55-21-0190-0190" "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("addcommandLexicalAnalyser_ValidScenario" unit_tests 8 0 "add 5 Roberto Nascimento 01/01/1960 +55-21-0190-0190     " "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("addcommandLexicalAnalyser_ValidScenario" unit_tests 9 0 "      add 6 Roberto Nascimento 01/01/1960 +55-21-0190-0190    " "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("addcommandLexicalAnalyser_ValidScenario" unit_tests 10 0 "add 7 Gustavo Gustavo 01/01/1960 +55-21-0190-0190" "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("addcommandLexicalAnalyser_ValidScenario" unit_tests 11 0 "add 8 Marcelo Marcelo AA/BB/CCCC +55-21-0190-0190" "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("addcommandLexicalAnalyser_ValidScenario" unit_tests 12 0 "add 9 Marcelo Marcelo 01/01/1960 +XX-WW-YYYY-ZZZZ" "Valor esperado: TRUE. Valor retornado: TRUE.")

do_test("delcommandLexicalAnalyser_ValidScenario" unit_tests 1 1 "del 1" "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("delcommandLexicalAnalyser_ValidScenario" unit_tests 2 1 "del 0" "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("delcommandLexicalAnalyser_ValidScenario" unit_tests 3 1 "del 00" "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("delcommandLexicalAnalyser_ValidScenario" unit_tests 4 1 "del 000" "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("delcommandLexicalAnalyser_ValidScenario" unit_tests 5 1 " del 1" "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("delcommandLexicalAnalyser_ValidScenario" unit_tests 6 1 "del 1 " "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("delcommandLexicalAnalyser_ValidScenario" unit_tests 7 1 " del 1 " "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("delcommandLexicalAnalyser_ValidScenario" unit_tests 8 1 "del 12" "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("delcommandLexicalAnalyser_ValidScenario" unit_tests 9 1 " del 12" "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("delcommandLexicalAnalyser_ValidScenario" unit_tests 10 1 "del 12 " "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("delcommandLexicalAnalyser_ValidScenario" unit_tests 11 1 " del 12 " "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("delcommandLexicalAnalyser_ValidScenario" unit_tests 12 1 "del 123" "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("delcommandLexicalAnalyser_ValidScenario" unit_tests 13 1 " del 123" "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("delcommandLexicalAnalyser_ValidScenario" unit_tests 14 1 "del 123 " "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("delcommandLexicalAnalyser_ValidScenario" unit_tests 15 1 " del 123 " "Valor esperado: TRUE. Valor retornado: TRUE.")

do_test("infocommandLexicalAnalyser_ValidScenario" unit_tests 1 2 "info 1" "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("infocommandLexicalAnalyser_ValidScenario" unit_tests 2 2 "info 0" "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("infocommandLexicalAnalyser_ValidScenario" unit_tests 3 2 "info 00" "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("infocommandLexicalAnalyser_ValidScenario" unit_tests 4 2 "info 000" "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("infocommandLexicalAnalyser_ValidScenario" unit_tests 5 2 " info 1" "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("infocommandLexicalAnalyser_ValidScenario" unit_tests 6 2 "info 1 " "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("infocommandLexicalAnalyser_ValidScenario" unit_tests 7 2 " info 1 " "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("infocommandLexicalAnalyser_ValidScenario" unit_tests 8 2 "info 12" "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("infocommandLexicalAnalyser_ValidScenario" unit_tests 9 2 " info 12" "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("infocommandLexicalAnalyser_ValidScenario" unit_tests 10 2 "info 12 " "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("infocommandLexicalAnalyser_ValidScenario" unit_tests 11 2 " info 12 " "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("infocommandLexicalAnalyser_ValidScenario" unit_tests 12 2 "info 123" "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("infocommandLexicalAnalyser_ValidScenario" unit_tests 13 2 " info 123" "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("infocommandLexicalAnalyser_ValidScenario" unit_tests 14 2 "info 123 " "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("infocommandLexicalAnalyser_ValidScenario" unit_tests 15 2 " info 123 " "Valor esperado: TRUE. Valor retornado: TRUE.")

do_test("querycommandLexicalAnalyser_ValidScenario" unit_tests 1 3 "query fn:r" "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("querycommandLexicalAnalyser_ValidScenario" unit_tests 2 3 "query ln:n" "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("querycommandLexicalAnalyser_ValidScenario" unit_tests 3 3 " query ln:n" "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("querycommandLexicalAnalyser_ValidScenario" unit_tests 4 3 "query ln:n  " "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("querycommandLexicalAnalyser_ValidScenario" unit_tests 5 3 " query ln:n  " "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("querycommandLexicalAnalyser_ValidScenario" unit_tests 6 3 " query             ln:n  " "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("querycommandLexicalAnalyser_ValidScenario" unit_tests 7 3 "query fn:Roberto" "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("querycommandLexicalAnalyser_ValidScenario" unit_tests 8 3 "query ln:Nascimento" "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("querycommandLexicalAnalyser_ValidScenario" unit_tests 9 3 "query bd:01/01/1960" "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("querycommandLexicalAnalyser_ValidScenario" unit_tests 10 3 "query pn:+55-21-0190-0190" "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("querycommandLexicalAnalyser_ValidScenario" unit_tests 11 3 " query pn:+55-21-0190-0190" "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("querycommandLexicalAnalyser_ValidScenario" unit_tests 12 3 "query pn:+55-21-0190-0190 " "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("querycommandLexicalAnalyser_ValidScenario" unit_tests 13 3 " query pn:+55-21-0190-0190 " "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("querycommandLexicalAnalyser_ValidScenario" unit_tests 14 3 " query             pn:+55-21-0190-0190 " "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("querycommandLexicalAnalyser_ValidScenario" unit_tests 15 3 "query fn:Roberto ln:Nascimento" "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("querycommandLexicalAnalyser_ValidScenario" unit_tests 16 3 "query fn:Roberto bd:01/01/1960" "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("querycommandLexicalAnalyser_ValidScenario" unit_tests 17 3 "query fn:Roberto pn:+55-21-0190-0190" "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("querycommandLexicalAnalyser_ValidScenario" unit_tests 18 3 " query fn:Roberto pn:+55-21-0190-0190" "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("querycommandLexicalAnalyser_ValidScenario" unit_tests 19 3 "query fn:Roberto pn:+55-21-0190-0190 " "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("querycommandLexicalAnalyser_ValidScenario" unit_tests 20 3 " query fn:Roberto pn:+55-21-0190-0190 " "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("querycommandLexicalAnalyser_ValidScenario" unit_tests 21 3 " query fn:Roberto    pn:+55-21-0190-0190 " "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("querycommandLexicalAnalyser_ValidScenario" unit_tests 22 3 "query ln:Nascimento fn:Roberto" "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("querycommandLexicalAnalyser_ValidScenario" unit_tests 23 3 "query ln:Nascimento bd:01/01/1960" "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("querycommandLexicalAnalyser_ValidScenario" unit_tests 24 3 "query ln:Nascimento pn:+55-21-0190-0190" "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("querycommandLexicalAnalyser_ValidScenario" unit_tests 25 3 " query ln:Nascimento pn:+55-21-0190-0190" "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("querycommandLexicalAnalyser_ValidScenario" unit_tests 26 3 "query ln:Nascimento pn:+55-21-0190-0190 " "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("querycommandLexicalAnalyser_ValidScenario" unit_tests 27 3 " query ln:Nascimento pn:+55-21-0190-0190 " "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("querycommandLexicalAnalyser_ValidScenario" unit_tests 28 3 " query ln:Nascimento      pn:+55-21-0190-0190 " "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("querycommandLexicalAnalyser_ValidScenario" unit_tests 29 3 "query bd:01/01/1960 fn:Roberto" "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("querycommandLexicalAnalyser_ValidScenario" unit_tests 30 3 "query bd:01/01/1960 ln:Nascimento pn:+55-21-0190-0190" "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("querycommandLexicalAnalyser_ValidScenario" unit_tests 31 3 "query bd:01/01/1960 pn:+55-21-0190-0190" "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("querycommandLexicalAnalyser_ValidScenario" unit_tests 32 3 " query bd:01/01/1960 pn:+55-21-0190-0190" "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("querycommandLexicalAnalyser_ValidScenario" unit_tests 33 3 "query bd:01/01/1960 pn:+55-21-0190-0190 " "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("querycommandLexicalAnalyser_ValidScenario" unit_tests 34 3 " query bd:01/01/1960 pn:+55-21-0190-0190 " "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("querycommandLexicalAnalyser_ValidScenario" unit_tests 35 3 " query bd:01/01/1960      pn:+55-21-0190-0190 " "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("querycommandLexicalAnalyser_ValidScenario" unit_tests 36 3 "query pn:+55-21-0190-0190 fn:Roberto" "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("querycommandLexicalAnalyser_ValidScenario" unit_tests 37 3 "query pn:+55-21-0190-0190 ln:Nascimento" "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("querycommandLexicalAnalyser_ValidScenario" unit_tests 38 3 "query pn:+55-21-0190-0190 bd:01/01/1960" "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("querycommandLexicalAnalyser_ValidScenario" unit_tests 39 3 " query pn:+55-21-0190-0190 bd:01/01/1960" "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("querycommandLexicalAnalyser_ValidScenario" unit_tests 40 3 "query pn:+55-21-0190-0190 bd:01/01/1960 " "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("querycommandLexicalAnalyser_ValidScenario" unit_tests 41 3 " query pn:+55-21-0190-0190 bd:01/01/1960 " "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("querycommandLexicalAnalyser_ValidScenario" unit_tests 42 3 " query    pn:+55-21-0190-0190    bd:01/01/1960 " "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("querycommandLexicalAnalyser_ValidScenario" unit_tests 43 3 "query fn:Roberto ln:Nascimento bd:01/01/1960" "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("querycommandLexicalAnalyser_ValidScenario" unit_tests 44 3 "query fn:Roberto ln:Nascimento pn:+55-21-0190-0190" "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("querycommandLexicalAnalyser_ValidScenario" unit_tests 45 3 "query fn:Roberto pn:+55-21-0190-0190 ln:Nascimento" "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("querycommandLexicalAnalyser_ValidScenario" unit_tests 46 3 "query fn:Roberto bd:01/01/1960 ln:Nascimento" "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("querycommandLexicalAnalyser_ValidScenario" unit_tests 47 3 " query fn:Roberto bd:01/01/1960 ln:Nascimento" "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("querycommandLexicalAnalyser_ValidScenario" unit_tests 48 3 " query fn:Roberto bd:01/01/1960 ln:Nascimento " "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("querycommandLexicalAnalyser_ValidScenario" unit_tests 49 3 "query fn:Roberto bd:01/01/1960 ln:Nascimento " "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("querycommandLexicalAnalyser_ValidScenario" unit_tests 50 3 "query fn:Roberto    bd:01/01/1960     ln:Nascimento " "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("querycommandLexicalAnalyser_ValidScenario" unit_tests 51 3 "query ln:Nascimento fn:Roberto bd:01/01/1960" "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("querycommandLexicalAnalyser_ValidScenario" unit_tests 52 3 "query ln:Nascimento fn:Roberto pn:+55-21-0190-0190" "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("querycommandLexicalAnalyser_ValidScenario" unit_tests 53 3 "query ln:Nascimento pn:+55-21-0190-0190 fn:Roberto" "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("querycommandLexicalAnalyser_ValidScenario" unit_tests 54 3 "query ln:Nascimento bd:01/01/1960 fn:Roberto" "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("querycommandLexicalAnalyser_ValidScenario" unit_tests 55 3 " query ln:Nascimento bd:01/01/1960 fn:Roberto" "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("querycommandLexicalAnalyser_ValidScenario" unit_tests 56 3 "query ln:Nascimento bd:01/01/1960 fn:Roberto " "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("querycommandLexicalAnalyser_ValidScenario" unit_tests 57 3 " query ln:Nascimento bd:01/01/1960 fn:Roberto " "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("querycommandLexicalAnalyser_ValidScenario" unit_tests 58 3 " query    ln:Nascimento    bd:01/01/1960    fn:Roberto " "Valor esperado: TRUE. Valor retornado: TRUE.")

do_test("terminatecommandLexicalAnalyser_ValidScenario" unit_tests 1 4 "000" "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("terminatecommandLexicalAnalyser_ValidScenario" unit_tests 2 4 " 000" "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("terminatecommandLexicalAnalyser_ValidScenario" unit_tests 3 4 "000 " "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("terminatecommandLexicalAnalyser_ValidScenario" unit_tests 4 4 " 000 " "Valor esperado: TRUE. Valor retornado: TRUE.")
do_test("terminatecommandLexicalAnalyser_ValidScenario" unit_tests 5 4 "    000    " "Valor esperado: TRUE. Valor retornado: TRUE.")

do_test("addcommandLexicalAnalyser_InvalidScenario" unit_tests 1 5 "" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("addcommandLexicalAnalyser_InvalidScenario" unit_tests 2 5 "                                             " "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("addcommandLexicalAnalyser_InvalidScenario" unit_tests 3 5 " ESSE NÃO É UM COMANDO ADD VÁLIDO            " "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("addcommandLexicalAnalyser_InvalidScenario" unit_tests 4 5 "ADD Carlos Irineu 99/88/9999 +00-00-0000-0000 444" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("addcommandLexicalAnalyser_InvalidScenario" unit_tests 5 5 "AdD Carlos Irineu 99/88/9999 +00-00-0000-0000 444" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("addcommandLexicalAnalyser_InvalidScenario" unit_tests 6 5 "Add Carlos Irineu 99/88/9999 +00-00-0000-0000 444" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("addcommandLexicalAnalyser_InvalidScenario" unit_tests 7 5 "aDd Carlos Irineu 99/88/9999 +00-00-0000-0000 444" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("addcommandLexicalAnalyser_InvalidScenario" unit_tests 8 5 "adD Carlos Irineu 99/88/9999 +00-00-0000-0000 444" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("addcommandLexicalAnalyser_InvalidScenario" unit_tests 9 5 "aDD Carlos Irineu 99/88/9999 +00-00-0000-0000 444" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("addcommandLexicalAnalyser_InvalidScenario" unit_tests 10 5 "add" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("addcommandLexicalAnalyser_InvalidScenario" unit_tests 11 5 "add A João Silva 01/02/2020 +51-33-9999-9988" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("addcommandLexicalAnalyser_InvalidScenario" unit_tests 12 5 "add BBB Carlos Irineu 99/88/9999 +00-00-0000-0000" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("addcommandLexicalAnalyser_InvalidScenario" unit_tests 13 5 "add Carlos Irineu 99/88/9999 +00-00-0000-0000 444" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("addcommandLexicalAnalyser_InvalidScenario" unit_tests 14 5 "444 Carlos Irineu 99/88/9999 +00-00-0000-0000" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("addcommandLexicalAnalyser_InvalidScenario" unit_tests 15 5 "add Gustavo Gustavo 01/01/1960 +55-21-0190-0190" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("addcommandLexicalAnalyser_InvalidScenario" unit_tests 16 5 "add  Marcelo Marcelo 01/01/1960 +55-21-0190-0190" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("addcommandLexicalAnalyser_InvalidScenario" unit_tests 17 5 "add 1 Marcelo 01/01/1960 +55-21-0190-0190" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("addcommandLexicalAnalyser_InvalidScenario" unit_tests 18 5 "add 1 01/01/1960 +55-21-0190-0190" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("addcommandLexicalAnalyser_InvalidScenario" unit_tests 19 5 "add 1 +55-21-0190-0190" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("addcommandLexicalAnalyser_InvalidScenario" unit_tests 20 5 "add 1 Marcelo Marcelo +55-21-0190-0190" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("addcommandLexicalAnalyser_InvalidScenario" unit_tests 21 5 "add 1 Marcelo Marcelo       +55-21-0190-0190" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("addcommandLexicalAnalyser_InvalidScenario" unit_tests 22 5 "add 1 Marcelo Marcelo 01/01/1960" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("addcommandLexicalAnalyser_InvalidScenario" unit_tests 23 5 "add 1 Marcelo Marcelo 01/0/1960 +55-21-0190-0190" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("addcommandLexicalAnalyser_InvalidScenario" unit_tests 24 5 "add 1 Marcelo Marcelo 01/000/1960 +55-21-0190-0190" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("addcommandLexicalAnalyser_InvalidScenario" unit_tests 25 5 "add 1 Marcelo Marcelo 01/01/1960 +55000-21-0190-0190" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("addcommandLexicalAnalyser_InvalidScenario" unit_tests 26 5 "add 1 Marcelo Marcelo 01/00/1960 +55-21-01 90-0190" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("addcommandLexicalAnalyser_InvalidScenario" unit_tests 27 5 "add 123 Roberto Nascimento 01/01/1960 +55-21-0190-0190 outro param" "Valor esperado: FALSE. Valor retornado: FALSE.")

do_test("delcommandLexicalAnalyser_InvalidScenario" unit_tests 1 6 "" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("delcommandLexicalAnalyser_InvalidScenario" unit_tests 2 6 "   " "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("delcommandLexicalAnalyser_InvalidScenario" unit_tests 3 6 "del " "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("delcommandLexicalAnalyser_InvalidScenario" unit_tests 4 6 " del" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("delcommandLexicalAnalyser_InvalidScenario" unit_tests 5 6 "del" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("delcommandLexicalAnalyser_InvalidScenario" unit_tests 6 6 "123 del" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("delcommandLexicalAnalyser_InvalidScenario" unit_tests 7 6 "del a" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("delcommandLexicalAnalyser_InvalidScenario" unit_tests 8 6 "del ab" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("delcommandLexicalAnalyser_InvalidScenario" unit_tests 9 6 "del abc" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("delcommandLexicalAnalyser_InvalidScenario" unit_tests 10 6 "dell 123" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("delcommandLexicalAnalyser_InvalidScenario" unit_tests 11 6 "deel 123" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("delcommandLexicalAnalyser_InvalidScenario" unit_tests 12 6 "DEL 123" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("delcommandLexicalAnalyser_InvalidScenario" unit_tests 13 6 "DEl 123" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("delcommandLexicalAnalyser_InvalidScenario" unit_tests 14 6 "Del 123" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("delcommandLexicalAnalyser_InvalidScenario" unit_tests 15 6 "DeL 123" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("delcommandLexicalAnalyser_InvalidScenario" unit_tests 16 6 "del:123" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("delcommandLexicalAnalyser_InvalidScenario" unit_tests 17 6 "del 1234" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("delcommandLexicalAnalyser_InvalidScenario" unit_tests 18 6 " del 1234" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("delcommandLexicalAnalyser_InvalidScenario" unit_tests 19 6 " del     1234" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("delcommandLexicalAnalyser_InvalidScenario" unit_tests 20 6 " del     1234  " "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("delcommandLexicalAnalyser_InvalidScenario" unit_tests 21 6 "del 1 aproveita e add 123 Roberto Nascimento 01/01/1960 +55-21-0190-0190" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("delcommandLexicalAnalyser_InvalidScenario" unit_tests 22 6 "del 12 aproveita e add 123 Roberto Nascimento 01/01/1960 +55-21-0190-0190" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("delcommandLexicalAnalyser_InvalidScenario" unit_tests 23 6 "del 123 aproveita e add 123 Roberto Nascimento 01/01/1960 +55-21-0190-0190" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("delcommandLexicalAnalyser_InvalidScenario" unit_tests 24 6 "del ABC aproveita e add 123 Roberto Nascimento 01/01/1960 +55-21-0190-0190" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("delcommandLexicalAnalyser_InvalidScenario" unit_tests 25 6 "del ABC aproveita del 123 junto e também add 123 Roberto Nascimento 01/01/1960 +55-21-0190-0190" "Valor esperado: FALSE. Valor retornado: FALSE.")

do_test("infocommandLexicalAnalyser_InvalidScenario" unit_tests 1 7 "" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("infocommandLexicalAnalyser_InvalidScenario" unit_tests 2 7 "   " "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("infocommandLexicalAnalyser_InvalidScenario" unit_tests 3 7 "info " "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("infocommandLexicalAnalyser_InvalidScenario" unit_tests 4 7 " info" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("infocommandLexicalAnalyser_InvalidScenario" unit_tests 5 7 "info" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("infocommandLexicalAnalyser_InvalidScenario" unit_tests 6 7 "info A" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("infocommandLexicalAnalyser_InvalidScenario" unit_tests 7 7 "info AB" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("infocommandLexicalAnalyser_InvalidScenario" unit_tests 8 7 "info ABC" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("infocommandLexicalAnalyser_InvalidScenario" unit_tests 9 7 "info  A" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("infocommandLexicalAnalyser_InvalidScenario" unit_tests 10 7 "info  AB" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("infocommandLexicalAnalyser_InvalidScenario" unit_tests 11 7 "info  ABC" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("infocommandLexicalAnalyser_InvalidScenario" unit_tests 12 7 "info  A " "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("infocommandLexicalAnalyser_InvalidScenario" unit_tests 13 7 "info  AB " "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("infocommandLexicalAnalyser_InvalidScenario" unit_tests 14 7 "info  ABC " "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("infocommandLexicalAnalyser_InvalidScenario" unit_tests 15 7 " info  A" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("infocommandLexicalAnalyser_InvalidScenario" unit_tests 16 7 " info  AB" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("infocommandLexicalAnalyser_InvalidScenario" unit_tests 17 7 " info  ABC" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("infocommandLexicalAnalyser_InvalidScenario" unit_tests 18 7 "   info     ABC    " "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("infocommandLexicalAnalyser_InvalidScenario" unit_tests 19 7 "123 info" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("infocommandLexicalAnalyser_InvalidScenario" unit_tests 20 7 "infoo 123" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("infocommandLexicalAnalyser_InvalidScenario" unit_tests 21 7 "iinfo 123" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("infocommandLexicalAnalyser_InvalidScenario" unit_tests 22 7 "INFO 123" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("infocommandLexicalAnalyser_InvalidScenario" unit_tests 23 7 "Info 123" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("infocommandLexicalAnalyser_InvalidScenario" unit_tests 24 7 "INfo 123" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("infocommandLexicalAnalyser_InvalidScenario" unit_tests 25 7 "INFo 123" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("infocommandLexicalAnalyser_InvalidScenario" unit_tests 26 7 "INfO 123" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("infocommandLexicalAnalyser_InvalidScenario" unit_tests 27 7 "InFO 123" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("infocommandLexicalAnalyser_InvalidScenario" unit_tests 28 7 "info:123" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("infocommandLexicalAnalyser_InvalidScenario" unit_tests 29 7 "info 1234" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("infocommandLexicalAnalyser_InvalidScenario" unit_tests 30 7 " info 1234" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("infocommandLexicalAnalyser_InvalidScenario" unit_tests 31 7 " info     1234" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("infocommandLexicalAnalyser_InvalidScenario" unit_tests 32 7 " info     1234  " "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("infocommandLexicalAnalyser_InvalidScenario" unit_tests 33 7 "info ABC aproveita e add 123 Roberto Nascimento 01/01/1960 +55-21-0190-0190" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("infocommandLexicalAnalyser_InvalidScenario" unit_tests 34 7 "del ABC aproveita del 123 junto e também add 123 Roberto Nascimento 01/01/1960 +55-21-0190-0190" "Valor esperado: FALSE. Valor retornado: FALSE.")

do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 1 8 "" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 2 8 "    " "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 3 8 "query " "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 4 8 " query " "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 5 8 "query" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 6 8 "query ln:" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 7 8 "query ln: " "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 8 8 "ln:n query" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 9 8 "QUERY ln:n" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 10 8 "Query ln:n" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 11 8 "QUery ln:n" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 12 8 "QUEry ln:n" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 13 8 "QUERy ln:n" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 14 8 "query fn:Rob erto" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 15 8 "query ln:Nas cimento" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 16 8 "query bd:01/01/1 960" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 17 8 "query pn:+55- 21-0190 -0190" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 18 8 " query pn:+ 55-21-0190-0190" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 19 8 "query pn:+ 55-21-0190-0190 " "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 20 8 " query pn:+55-21-0190-019 0 " "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 21 8 " query             pn:+55 -21-0190-0190 " "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 22 8 "query fn:Robe rto ln:Nascim ento" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 23 8 "query fn:Rob erto bd:01/01/ 1960" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 24 8 "query fn:Ro berto pn:+55-21-019 0-0190" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 25 8 " query fn:R oberto pn:+55-21- 0190-0190" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 26 8 "query fn:Ro berto pn:+55-21 -0190-0190 " "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 27 8 " query fn:Rob erto pn:+55-21-01 90-0190 " "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 28 8 " query fn:Robe rto    pn:+55-21-0190 -0190 " "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 29 8 "query ln:Nasc imento fn:Rob erto" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 30 8 "query ln:Nasci mento bd:01/01/ 1960" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 31 8 "query ln:Nasc imento pn:+55-21-019 -0190" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 32 8 " query ln:Nas to pn:+55-21-0 0190" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 33 8 "query ln:Nas mento pn:+55-21 -0190-0190 " "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 34 8 " query ln:Nas ento pn:+55-21- 0190 " "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 35 8 " query ln:Nas mento      pn:+55 90-0190 " "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 36 8 "query bd:01/ /1960 fn:Ro rto" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 37 8 "query bd:01/ /1960 ln:Nasc nto bd:0 /1960" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 38 8 "query bd:01 1/1960 pn:+55- 90-0190" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 39 8 " query bd:0 /1960 pn:+55-21- 0190" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 40 8 "query bd:01/ 960 pn:+55-21-0 0190 " "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 41 8 " query bd:01/0 0 pn:+55-21 -0190 " "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 42 8 " query bd:01 1960      pn:+55-2 90-0190 " "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 43 8 "query pn:+55 190-0190 fn:R to" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 44 8 "query pn:+55-2 0-0190 ln:Nas ento" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 45 8 "query pn:+5 1-0190-0190 bd: 01/1960" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 46 8 " query pn:+55- 0-0190 bd:01/ 1960" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 47 8 "query pn:+55- 190-0190 bd:01/0 60 " "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 48 8 " query pn:+55- 90-0190 bd:01/0 1960 " "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 49 8 " query    pn:+55-21- 190    bd:01 1960 " "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 50 8 "query fn:Ro to ln:Nasc ento bd:01/ 960" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 51 8 "query fn:Ro to ln:Nascim nto pn:+55-21 90-0190" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 52 8 "query fn:Robe o pn:+55-2 90-0190 ln:Na mento" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 53 8 "query fn:Ro o bd:01/ 60 ln:Nasc nto" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 54 8 " query fn:Ro to bd:01/0 960 ln:Nasci nto" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 55 8 " query fn:Rob to bd:01/ 1960 ln:Nas mento " "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 56 8 "query fn:Rob rto bd:01/01  ln:Na nto " "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 57 8 "query fn:Ro to    bd:01/0 1960     ln:Nas ento " "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 58 8 "query ln:Nasc ento fn:Robe to bd:01/0 60" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 59 8 "query ln:Nas ento fn:Ro rto pn:+55-21- -0190" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 60 8 "query ln:Nas ento pn:+55-2 190-0190 fn:Ro o" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 61 8 "query ln:Nasc ento bd:01/01/1960 fn:Roberto" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 62 8 " query ln:Nascimento bd:0 1/1960 fn:Roberto" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 63 8 "query ln:Nascimento bd:01/0 1960 fn:Roberto " "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 64 8 " query ln:Nascimento bd:01/01/1960 fn:Robe rto " "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 65 8 " query    ln:Nasc ento    bd:01/01/1960    fn:Roberto " "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 66 8 "query fn:Roberto ln:Nascimento bd:01/01/1960 fn:Roberto" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 67 8 "query fn:Roberto ln:Nascimento bd:01/01/1960 ln:Nascime" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 68 8 "query bd:01/01/1960 ln:Nascnto bd:01/01/1960 ln:Nascime" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("querycommandLexicalAnalyser_InvalidScenario" unit_tests 69 8 "query pn:+55-21-4444-0190 bd:01/01/1960 pn:+55-21-4444-0190" "Valor esperado: FALSE. Valor retornado: FALSE.")

do_test("terminatecommandLexicalAnalyser_InvalidScenario" unit_tests 1 9 "" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("terminatecommandLexicalAnalyser_InvalidScenario" unit_tests 2 9 "   " "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("terminatecommandLexicalAnalyser_InvalidScenario" unit_tests 3 9 "000 termina aí" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("terminatecommandLexicalAnalyser_InvalidScenario" unit_tests 4 9 "OOO" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("terminatecommandLexicalAnalyser_InvalidScenario" unit_tests 5 9 "001" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("terminatecommandLexicalAnalyser_InvalidScenario" unit_tests 6 9 "0" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("terminatecommandLexicalAnalyser_InvalidScenario" unit_tests 7 9 "00" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("terminatecommandLexicalAnalyser_InvalidScenario" unit_tests 8 9 "000 000" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("terminatecommandLexicalAnalyser_InvalidScenario" unit_tests 9 9 "000 001" "Valor esperado: FALSE. Valor retornado: FALSE.")
do_test("terminatecommandLexicalAnalyser_InvalidScenario" unit_tests 10 9 "000 DAVE, JUST WHAT..." "Valor esperado: FALSE. Valor retornado: FALSE.")
